Track more accounts

--- a/dashboards/finance.erb
+++ b/dashboards/finance.erb
@@ -5,12 +5,23 @@
   <ul>
 
     <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
-      <div data-id="house-fund" data-view="Number" data-title="House Fund Balance"
+      <div data-id="checking" data-view="Number"
+           data-moreinfo="" data-prefix="$" />
+    </li>
+
+    <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
+      <div data-id="emergency-savings" data-view="Number"
+           data-moreinfo="" data-prefix="$" />
+    </li>
+
+
+    <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
+      <div data-id="house-savings" data-view="Number"
            data-moreinfo="$50K Goal" data-prefix="$" />
     </li>
 
     <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
-      <div data-id="checking-account" data-view="Number" data-title="Checking Account"
+      <div data-id="mark-cbl-savings" data-view="Number"
            data-moreinfo="" data-prefix="$" />
     </li>
 
