Ability to view expenses for current month

--- a/dashboards/finance.erb
+++ b/dashboards/finance.erb
@@ -25,6 +25,16 @@
            data-moreinfo="" data-prefix="$" />
     </li>
 
+    <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
+      <div data-id="expenses-groceries" data-view="Number"
+           data-moreinfo="" data-prefix="$" />
+    </li>
+
+    <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
+      <div data-id="expenses-gas" data-view="Number"
+           data-moreinfo="" data-prefix="$" />
+    </li>
+
   </ul>
 
 </div>
