Show monthly spending as a list

--- a/dashboards/finance.erb
+++ b/dashboards/finance.erb
@@ -6,33 +6,38 @@
 
     <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
       <div data-id="checking" data-view="Number"
-           data-moreinfo="" data-prefix="$" />
+           data-prefix="$" />
     </li>
 
     <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
       <div data-id="emergency-savings" data-view="Number"
-           data-moreinfo="" data-prefix="$" />
+           data-prefix="$" />
     </li>
-
 
     <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
       <div data-id="house-savings" data-view="Number"
-           data-moreinfo="$50K Goal" data-prefix="$" />
+           data-prefix="$" />
+    </li>
+
+    <li data-row="1" data-col="1" data-sizex="1" data-sizey="2">
+      <div data-id="monthly-spending" data-view="List"
+           data-unordered="true"
+           data-title="Monthly Spending" />
     </li>
 
     <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
       <div data-id="mark-cbl-savings" data-view="Number"
-           data-moreinfo="" data-prefix="$" />
+           data-prefix="$" />
     </li>
 
     <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
       <div data-id="expenses-groceries" data-view="Number"
-           data-moreinfo="" data-prefix="$" />
+           data-prefix="$" />
     </li>
 
     <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
       <div data-id="expenses-gas" data-view="Number"
-           data-moreinfo="" data-prefix="$" />
+           data-prefix="$" />
     </li>
 
   </ul>
