--- a/dashboards/finance.erb
+++ b/dashboards/finance.erb
@@ -10,12 +10,7 @@
     </li>
 
     <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
-      <div data-id="emergency-savings" data-view="Number"
-           data-prefix="$" />
-    </li>
-
-    <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
-      <div data-id="house-savings" data-view="Number"
+      <div data-id="savings" data-view="Number"
            data-prefix="$" />
     </li>
 
@@ -23,21 +18,6 @@
       <div data-id="monthly-spending" data-view="List"
            data-unordered="true"
            data-title="Monthly Spending" />
-    </li>
-
-    <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
-      <div data-id="mark-cbl-savings" data-view="Number"
-           data-prefix="$" />
-    </li>
-
-    <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
-      <div data-id="expenses-groceries" data-view="Number"
-           data-prefix="$" />
-    </li>
-
-    <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
-      <div data-id="expenses-gas" data-view="Number"
-           data-prefix="$" />
     </li>
 
   </ul>
