--- a/dashboards/finance.erb
+++ b/dashboards/finance.erb
@@ -14,7 +14,12 @@
            data-prefix="$" />
     </li>
 
-    <li data-row="1" data-col="1" data-sizex="2" data-sizey="2">
+    <li data-row="2" data-col="1" data-sizex="1" data-sizey="1">
+      <div data-id="credit-card" data-view="Number"
+           data-prefix="$" />
+    </li>
+
+    <li data-row="1" data-col="3" data-sizex="2" data-sizey="2">
       <div data-id="monthly-spending" data-view="List"
            data-unordered="true"
            data-title="Monthly Spending" />
