Use a new widget for balances

--- a/dashboards/finance.erb
+++ b/dashboards/finance.erb
@@ -1,9 +1,7 @@
 <% content_for :title do %>Financial Dashboard<% end %>
 
 <div class="gridster">
-
   <ul>
-
     <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
       <div data-id="checking" data-view="Number"
            data-prefix="$" />
@@ -20,11 +18,9 @@
     </li>
 
     <li data-row="1" data-col="3" data-sizex="2" data-sizey="2">
-      <div data-id="monthly-spending" data-view="List"
+      <div data-id="monthly-spending" data-view="BalanceList"
            data-unordered="true"
            data-title="Monthly Spending" />
     </li>
-
   </ul>
-
 </div>
