--- a/widgets/balance_list/balance_list.scss
+++ b/widgets/balance_list/balance_list.scss
@@ -29,6 +29,10 @@ $moreinfo-color:    rgba(255, 255, 255, 0.7);
     margin-bottom: 5px;
   }
 
+  .wrapper {
+    position: relative;
+  }
+
   .list-nostyle {
     list-style: none;
   }
@@ -37,12 +41,15 @@ $moreinfo-color:    rgba(255, 255, 255, 0.7);
     color: $label-color;
   }
 
-  .value {
-    float: right;
-    margin-left: 12px;
+  .budget, .value {
+    position: absolute;
     font-weight: 600;
     color: $value-color;
+    text-align: right;
   }
+
+  .budget { right: 0; }
+  .value { right: 12%; }
 
   .updated-at {
     color: rgba(0, 0, 0, 0.3);
