--- a/widgets/balance_list/balance_list.scss
+++ b/widgets/balance_list/balance_list.scss
@@ -38,17 +38,37 @@ $moreinfo-color:    rgba(255, 255, 255, 0.7);
     color: $label-color;
   }
 
-  .budget, .value {
+  .budget, .progress-bar {
     position: absolute;
-    font-weight: 600;
+  }
+  .budget, .value {
     color: $value-color;
+    font-weight: 600;
+  }
+
+  .budget {
+    right: 0;
     text-align: right;
   }
 
-  .budget { right: 0; }
-  .value { right: 12%; }
+  .value {
+    padding: 0 10px;
+  }
 
   .updated-at {
     color: rgba(0, 0, 0, 0.3);
+  }
+
+  .progress-bar {
+    width: 40%;
+    right: 10%;
+    background: #d00;
+    box-sizing: border-box;
+
+    .bar {
+      width: 75%;
+      display: block;
+      background-color: red;
+    }
   }
 }
